# DynamicCurrentEVChargeController

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: validate.yml
custom_components/ev_dynamic_load_balancer/: __init__.py  binary_sensor.py  config_flow.py  const.py  controller.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  options_flow.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/ev_dynamic_load_balancer/translations/: es.json
tests/: __init__.py  conftest.py  test_controller.py
