[project]
name = "ev-dynamic-load-balancer"
version = "1.0.0"
description = "Home Assistant custom integration that dynamically balances EV charging current against grid import power"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Matias Settimo" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["custom_components", "tests"]

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "PL",     # pylint
    "RUF",    # ruff specific
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    "PLR0911", # controller compute() legitimately has many returns
    "PLR0912",
    "PLR2004", # magic values are fine in tests and physics constants
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.ev_dynamic_load_balancer"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
